--- a/_posts/2012-01-09-setting-metrics-that-encourage-failure.html
+++ b/_posts/2012-01-09-setting-metrics-that-encourage-failure.html
@@ -1,5 +1,5 @@
 --- 
-permalink: /setting-metrics-that-encourage-failure/index.html
+permalink: /setting-metrics-that-encourage-failure.html
 layout: post
 title: Setting Metrics That Encourage Failure
 published: true
@@ -8,15 +8,19 @@ categories: []
 ---
 <p>
 <p>I've been using a nifty app called <a href="http://chains.cc/">Chains</a> to keep track of my New Year's resolutions. It is based on <a href="http://lifehacker.com/281626/jerry-seinfelds-productivity-secret">Jerry Seinfeld's principle of "Don't Break the Chain,"</a> in which you strive to accumulate as many consecutive days of keeping to a certain habit. The idea is that the longer your "chain" becomes, the more impetus you have to not break it.</p>
-<p>Chains has been working wonders for me so far. I don't get the same nagging feeling I get with a to-do list or a task manager. In fact, the small act of adding one more link to my chain of habits is incredibly gratifying.[[posterous-content:wBDymHmHqgchnGpvFmoj]]</p>
+<p>Chains has been working wonders for me so far. I don't get the same nagging feeling I get with a to-do list or a task manager. In fact, the small act of adding one more link to my chain of habits is incredibly gratifying.</p>
+
+<img src="/public/chains1.png" />
+
 <p>However, I noticed a small lapse in judgement as I was using this tool. The problem was that the gratification of adding links to a chain was almost too much. I broke my promise to sleep by midnight last night but before I hit the hay, I impulsively clicked "Done" on my "Sleep By Midnight" habit.</p>
 <p>Pretty soon I realized what I had done but instead of immediately undoing it, I entertained the notion of simply leaving it. If I didn't build up my chain, it felt like a failure. I had to do it, even if it meant that I was lying to myself; it just felt too good.</p>
 <p>I had the equinamity to force myself to be honest. But I realized that the problem with every metric is that sooner or later, you begin to pander to the metric rather than working on what the metric is actually trying to measure.&nbsp;</p>
 <p>If the performance is self-reported, you become tempted to lie. Otherwise, you can still do a sloppy job in order to meet short term goals. For example, a salesman can too agressively upsell to existing customers to meet monthly sales goals, which damages his goodwill with them and might lose him the account later on.</p>
-[[posterous-content:yrhpteoexDklgilAkinb]]</p>
-<div>
+
+<img src="/public/chains2.png" />
+
 <p>What is the solution? For this particular scenario, I ensured that there was a meta-metric -- a chain called "Being honest on Chains". Regardless of how many habits I kept or failed on a given day, I knew that as long as I answered honestly I would get to click "Done" on the honesty chain. And while it meant accepting my failures, it also meant I was staying true to my ulterior goal of self-improvement.</p>
 <p>This technique can possibly be applied at the workplace, with teams or anywhere performance is measured. The first step is to realize that a measurement is a proxy for what really matters. Attaching too much importance to it makes it a system to be gamed.&nbsp;</p>
 <p>It is wise to measure failures, attempts and effort without fear of penalty. Not only does it increase honesty &nbsp;-- because it feels far better to fill in a failure than to not be able to put down anything at all -- but it also gives more granular information to analyze.</p>
 <p>Thoughts? Leave a line in the comments.</p>
-</div>
+
