--- a/_posts/2012-01-17-nappy-boy-and-pretty-boy-finding-your-perfect.html
+++ b/_posts/2012-01-17-nappy-boy-and-pretty-boy-finding-your-perfect.html
@@ -1,12 +1,13 @@
 --- 
-permalink: /nappy-boy-and-pretty-boy-finding-your-perfect/index.html
+permalink: /nappy-boy-and-pretty-boy-finding-your-perfect.html
 layout: post
 title: "Nappy Boy and Pretty Boy: Finding Your Perfect Cofounder"
 published: true
 categories: []
 
 ---
-<p>[[posterous-content:mIBHwlxkFyjAhbDuGtsf]]<em><span style="font-size: x-small;">Chris Brown (Pretty Boy) and T-Pain (Nappy Boy) consistently produce radio hits together</span></em></p>
+<img src="/public/tpain.jpg" />
+<p><em><span style="font-size: x-small;">Chris Brown (Pretty Boy) and T-Pain (Nappy Boy) consistently produce radio hits together</span></em></p>
 <p>One of the most common problems I hear from friends looking to get into startups is the difficulty in finding a cofounder. While I was fortunate enough to stumble upon my own cofounders, I can empathize.&nbsp;It seems that the interests of business people are at odds with those of engineers. It's easy for one party to feel shortchanged or for visions to diverge. I've heard of plenty of cofounder disasters.</p>
 <p>But if you look at successful startup founders, even the venerable Jobs and Wozniak, a pattern emerges. Every good pair of founders needs to have what I call a "Nappy Boy" and a "Pretty Boy".</p>
 <p>The Pretty Boy is a dreamer and a visionary. He can make you fall in love with the future he has concocted. His foresight is unparalleled but his track record may be spotty. The Pretty Boy may sound like a douchebag "idea guy" but he's not. This persona does not necessarily imply a non-technical person. For example, an engineer Pretty Boy can convince you that a distributed, in-memory streaming database will change the way companies look at their data. <strong>The Pretty Boy looks beyond the status quo.</strong></p>
