--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@ title: Tom Preston-Werner
     </div> <!-- #contact -->
 
     <div id="products" class="section">
-      <h1>Current Work <small>See more &#8594</small></h1>
+      <h1>Current Work <a href=""><small>See more &#8594</small></a></h1>
 
       <div class="row">
-        <img class="span8" src="http://placehold.it/460x150" />
+        <img class="span8" src="/public/bridge.png" />
 
         <div class="span8">
           <h2>Bridge <small>Flotype Inc.</small></h2>
@@ -73,7 +73,7 @@ title: Tom Preston-Werner
       </div> <!-- .row -->
 
       <div class="row">
-        <img class="span8" src="http://placehold.it/460x150" />
+        <img class="span8" src="/public/nowjs.png" />
 
         <div class="span8">
           <h2>NowJS <small>Flotype Inc.</small></h2>
@@ -84,7 +84,7 @@ title: Tom Preston-Werner
       </div> <!-- .row -->
   
       <div class="row">
-        <img class="span8" src="http://placehold.it/460x150" />
+        <img class="span8" src="/public/gitcoach.png" />
 
         <div class="span8">
           <h2>GitCoach <small>Sridatta Thatipamala</small></h2>
