--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Tom Preston-Werner
         </h1>
         <p class="lead">I create things that allow people to work smarter, live better, and be happier</p>
       </div> <!-- .header -->
-      <img class="span3 offset2" id="headshot" src="public/vector_sri.jpg" />
+      <img class="span3 offset2" id="headshot" src="public/vector_sri.png" />
     </div> <!-- .row -->
   </div> <!-- .container -->
 
