Contact links work

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@ title: Tom Preston-Werner
           <h1>Connect with me</h1>
           <p>I love hearing from people and I respond to almost every message within a day. Contact me with questions, interesting ideas or suggestions.</p>
           <ul id="contact-list">
-            <li><div id="link-twitter"><a href="#" >Twitter</a></div>
-            <li><a href="#" id="link-email">Email</a></li>
-            <li><a href="#" id="link-quora">Quora</a></li>
+            <li><a href="http://twitter.com/sridatta" >Twitter</a>
+            <li><a href="mailto:sthatipamala@gmail.com" id="link-email">Email</a></li>
+            <li><a href="http://www.linkedin.com/profile/view?id=10626513" >LinkedIn</a></li>
           </ul>
           
         </div>
