Added links or status tags to projects

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@ title: Tom Preston-Werner
 
         <div class="span8">
           <h2>Bridge <small>Flotype Inc.</small></h2>
+          <p><span class="label">Coming soon</span></p>
           <p>
             Bridge is a revolutionary way to develop web applications. Through Bridge, developers can compose a custom service-oriented topology made of any variety of languages without having to worry about the underlying networking and serialization. On this project I worked on an Erlang connection handler as well as the Java and C++ clients.
           </p>
@@ -76,7 +77,7 @@ title: Tom Preston-Werner
         <img class="span8" src="/public/nowjs.png" />
 
         <div class="span8">
-          <h2>NowJS <small>Flotype Inc.</small></h2>
+          <h2><a href="http://nowjs.com">NowJS</a> <small>Flotype Inc.</small></h2>
           <p>
           NowJS makes it amazingly easy to build real-time web applications. It provides a shared namespace between the server and the client, allowing such magic as shared variables and remote procedure calls. NowJS quickly became one of the top libraries in the Node.js community due to its unprecendent simplicity, allowing you to write a chat server in 12 lines of code.
           </p>
@@ -88,6 +89,7 @@ title: Tom Preston-Werner
 
         <div class="span8">
           <h2>GitCoach <small>Sridatta Thatipamala</small></h2>
+          <p><span class="label">Coming soon</span></p>
           <p>
           The GIT version control system has become the defacto choice of the developer community. While Git is powerful, most Git tutorials are either too simplistic or far too theoretical. GitCoach teaches Git through experience. Users learn advanced Git concepts and practice by applying them to realistic challenges. The site features a full in-browser, JS implementation of Git so users can practice without even having to install.
           </p>
