Removed .html from permalinks. MY FUCKING GOD. TROLLS

--- a/_posts/2010-08-18-why-being-a-techie-is-ruining-your-products.html
+++ b/_posts/2010-08-18-why-being-a-techie-is-ruining-your-products.html
@@ -1,5 +1,5 @@
 --- 
-permalink: /why-being-a-techie-is-ruining-your-products.html
+permalink: /why-being-a-techie-is-ruining-your-products
 layout: post
 title: Why Being A Techie Is Ruining Your Products
 published: true
