--- a/_posts/2010-08-28-youre-only-as-good-as-others-say-you-are.html
+++ b/_posts/2010-08-28-youre-only-as-good-as-others-say-you-are.html
@@ -1,5 +1,5 @@
 --- 
-permalink: /youre-only-as-good-as-others-say-you-are.html
+permalink: /youre-only-as-good-as-others-say-you-are
 layout: post
 title: You're Only As Good As Others Say You Are
 published: true
