--- a/_posts/2011-09-18-what-computer-geeks-really-do-a-guide-for-fri.html
+++ b/_posts/2011-09-18-what-computer-geeks-really-do-a-guide-for-fri.html
@@ -1,5 +1,5 @@
 --- 
-permalink: /what-computer-geeks-really-do-a-guide-for-fri.html
+permalink: /what-computer-geeks-really-do-a-guide-for-fri
 layout: post
 title: "What Computer Geeks Really Do: A Guide for Friends, Family and Humanities Students"
 published: true
