--- a/_posts/2011-09-19-hidden-elegance-of-the-jvm.html
+++ b/_posts/2011-09-19-hidden-elegance-of-the-jvm.html
@@ -1,5 +1,5 @@
 --- 
-permalink: /hidden-elegance-of-the-jvm.html
+permalink: /hidden-elegance-of-the-jvm
 layout: post
 title: "Hidden Elegance of the JVM  "
 published: true
