--- a/_posts/2011-11-28-how-to-everything-you-want-with-zero-discipli.html
+++ b/_posts/2011-11-28-how-to-everything-you-want-with-zero-discipli.html
@@ -1,5 +1,5 @@
 --- 
-permalink: /how-to-everything-you-want-with-zero-discipli.html
+permalink: /how-to-everything-you-want-with-zero-discipli
 layout: post
 title: How to Achieve Everything You Want With Zero Discipline
 published: true
