--- a/_posts/2012-01-09-setting-metrics-that-encourage-failure.html
+++ b/_posts/2012-01-09-setting-metrics-that-encourage-failure.html
@@ -1,5 +1,5 @@
 --- 
-permalink: /setting-metrics-that-encourage-failure.html
+permalink: /setting-metrics-that-encourage-failure
 layout: post
 title: Setting Metrics That Encourage Failure
 published: true
