--- a/_posts/2012-01-17-nappy-boy-and-pretty-boy-finding-your-perfect.html
+++ b/_posts/2012-01-17-nappy-boy-and-pretty-boy-finding-your-perfect.html
@@ -1,5 +1,5 @@
 --- 
-permalink: /nappy-boy-and-pretty-boy-finding-your-perfect.html
+permalink: /nappy-boy-and-pretty-boy-finding-your-perfect
 layout: post
 title: "Nappy Boy and Pretty Boy: Finding Your Perfect Cofounder"
 published: true
