--- a/_posts/2010-09-05-the-frightening-return-of-walled-gardens.html
+++ b/_posts/2010-09-05-the-frightening-return-of-walled-gardens.html
@@ -1,5 +1,5 @@
 --- 
-permalink: /the-frightening-return-of-walled-gardens.html
+permalink: /the-frightening-return-of-walled-gardens
 layout: post
 title: The Frightening Return of Walled Gardens
 published: true
