--- a/_posts/2011-09-18-a-note-about-gender-specific-pronouns.html
+++ b/_posts/2011-09-18-a-note-about-gender-specific-pronouns.html
@@ -1,5 +1,5 @@
 --- 
-permalink: /a-note-about-gender-specific-pronouns.html
+permalink: /a-note-about-gender-specific-pronouns
 layout: post
 title: "A Note About Gender-specific Pronouns "
 published: true
