--- a/_posts/2012-01-08-testing-out-syntax-highlighting.html
+++ b/_posts/2012-01-08-testing-out-syntax-highlighting.html
@@ -1,5 +1,5 @@
 --- 
-permalink: /testing-out-syntax-highlighting.html
+permalink: /testing-out-syntax-highlighting
 layout: post
 title: Testing Out Syntax Highlighting
 published: true
