--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Home
 <div class="row">
   <div id="header" class="span10">
     <h1> Sridatta Thatipamala </h1>
-    <p id="job-title">Developer and founder at Flotype</p>
+    <p id="job-title">Developer and founder of Flotype</p>
     <p id="tagline">I create things that allow people to work smarter, live better, and be happier</p>
   </div> <!-- .header -->
 
