add contact icons

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@ title: Home
     <h1> Sridatta Thatipamala </h1>
     <p id="job-title">Developer and founder of Flotype</p>
     <p id="tagline">I create things that allow people to work smarter, live better, and be happier</p>
+    <ul id="contact" class="inline pretty-list">
+      <li><a href="mailto:sthatipamala@gmail.com"><img src="/public/images/email.png" alt="Email" class="icon"/></a></li>
+      <li><a href="http://www.linkedin.com/pub/sridatta-thatipamala/3/685/729"><img src="/public/images/linkedin.png" alt="LinkedIn" class="icon"/></a></li>
+      <li><a href="http://twitter.com/sridatta"><img src="/public/images/twitter.png" alt="Twitter" class="icon"/></a></li>
+    </ul>
   </div> <!-- .header -->
 
   <img class="span3 offset2" id="headshot" src="public/vector_sri.png" />
